1.7 -- 
	* add suggestion to disable TV out
	* add suggestion to disable Wake-On-Lan for unused ethernet

1.6 --	Jun 8th, 2007
	* Add suggestion to rf_kill unused wireless interfaces
	* Propose killing "sealert"; this is a new thing in F7 that wakes up
	  10 times per second for no reason
	* avoid showing the laptop mode hint when on AC - Val Henson
	* suggest enabling noatime to save disk IO's
	* suggest enabling SATA AHCI Link powermanagement
	* suggest enabling the SMP Power Aware Scheduler

1.5 -- May 27th, 2007
	* fix resize-corrupts-screen-content bug
	* add interrupts to the wakeups/second data in the emulated
	  (non-mobile) case
	* calculate a long term power usage from battery charge deltas;
	  this should help people whos battery doesn't report discharge
	  rates, and also will provide a less noisy datapoint
	* Add option to use `kill` on some known power hogs if they are
	  actually waking up a lot:
	  - beagle (even latest wakes up 10 times/second when not indexing)
	  - hal (suggest to stop cdrom polling)
	  - gnome-power-manager 
	  These only show if these actually wake up the cpu 'a lot'; so if
	  these get fixed then the suggestion will not display.

1.4 -- May 25th, 2007
	* use gettext to allow translation
          (with lots of thanks to the various translators, especially
	   to Benjamin Pineau who showed me how to use gettext tools)
	* fix bluethooth-checks-cause-autload-of-bluetooth bug
	* use ncurses (Sebastian Kuzminsky)
	* rotate through the suggestions randomly, so that all of them
	  will show over time
	* Fix the CONFIG_SND_AC97_POWER_SAVE check to only report on ac97 hw
	* report "hidden but suprious" timer ticks (due to missing hpet or
	  lack of NO_HZ)
	* check for HPET being present; if not suggest user to toggle in
   	  BIOS or apply the patch
	* Some suggestions have become "active", you can press a key to
	  tune it right away.
	* Add active suggestion to enable AC97 powersave mode at runtime