@@ -2,7 +2,7 @@ BINDIR=/usr/bin
 LOCALESDIR=/usr/share/locale
 MANDIR=/usr/share/man/man1
 WARNFLAGS=-Wall  -W -Wshadow
-CFLAGS?=-O2 -g ${WARNFLAGS}
+CFLAGS?=-O0 -g ${WARNFLAGS}
 CC?=gcc
 
 
@@ -15,8 +15,9 @@ CC?=gcc
 # libncursesw5-dev package. 
 #
 
-OBJS = powertop.o config.o process.o misctips.o bluetooth.o display.o suggestions.o wireless.o cpufreq.o sata.o xrandr.o ethernet.o
-
+OBJS = powertop.o config.o process.o misctips.o bluetooth.o display.o suggestions.o wireless.o cpufreq.o \
+	sata.o xrandr.o ethernet.o cpufreqstats.o
+	
 
 powertop: $(OBJS) Makefile powertop.h
 	$(CC) ${CFLAGS}  $(OBJS) -lncursesw -o powertop
